--- a/EditSectionHiliteLink/EditSectionHiliteLink.css
+++ b/EditSectionHiliteLink/EditSectionHiliteLink.css
@@ -1,5 +1,5 @@
 /* CSS StyleSheet for EditSectionHiliteLink extensions */
 
 div.edit_section_hilite {
-		background-color:Lavender;
+		background-color:#B0E0E6;
 }
