Make th underlines solid black instead of grey
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51590 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -447,9 +447,16 @@ li#ca-nstab-thread {
 	border-collapse: collapse;
 }
 
+.lqt_toc th {
+	border-bottom: 1px solid #000000;
+}
+
 .lqt_toc td,.lqt_toc th {
 	margin: 0;
 	padding: 0.2em;
-	border-bottom: 1px solid #aaaaaa;
 	text-align: left;
+}
+
+.lqt_toc td {
+	border-bottom: 1px solid #aaaaaa;
 }
