--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -15,6 +15,7 @@ div#edittoolbar div.group {
 div#edittoolbar div.group:first-child {
 	border-left: none;
 }
+body.rtl div#edittoolbar div.tabs,
 body.rtl div#edittoolbar div.group {
 	float: right;
 	padding-left: 0;
