Added optional selective text-labels for groups, restructured the toolbar definition format, reorganized the format toolbar a bit, modified the format icons for sizing to be more vertically centered.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51599 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -43,6 +43,19 @@ div#edittoolbar div.sections > div.section {
 body.rtl div#edittoolbar div.sections > div.section {
 	float: right;
 }
+div#edittoolbar div.group > div.label {
+	float: left;
+	border: 0px;
+	height: 22px;
+	line-height: 22px;
+	margin: 2px;
+	margin-left: 5px;
+	margin-right: 5px;
+	color: #666666;
+}
+body.rtl div#edittoolbar div.group > div.label {
+	float: right;
+}
 div#edittoolbar div.group > img {
 	float: left;
 	border: 0px;
