Made the CSS adjustments to visually attach the toolbar to the textarea below it. Twaeked some of the padding and margins of buttons.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51608 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -1,7 +1,16 @@
 /* CSS StyleSheet for Toolbar extensions */
 
+/* MEDIAWIKI DEPENDENT ID */
+textarea#wpTextbox1 {
+	border: solid silver 1px;
+}
+/* ... */
 div#edittoolbar {
 	width: 100%;
+	padding: 0.1em;
+	border: solid silver 1px;
+	border-bottom-width: 0;
+	margin-bottom: -1px;
 	background-color: #EEEEEE;
 }
 div#edittoolbar div.tabs,
@@ -64,7 +73,7 @@ div#edittoolbar div.group > img {
 	border: 0px;
 	height: 22px;
 	width: 22px;
-	margin: 2px;
+	padding: 2px;
 	cursor: pointer;
 }
 body.rtl div#edittoolbar div.group > img {
