--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -4,11 +4,11 @@
 form#editform {
 	margin: 0;
 	padding: 0;
-	padding-right: 22px;
+	padding-right: 2px;
 }
 textarea#wpTextbox1 {
 	border: solid silver 1px;
-	padding: 10px;
+	padding: 0;
 	margin-top: -2px;
 }
 /* ... */
