Added some help content - still not done - more examples needed
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51706 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -106,6 +106,7 @@ div#edittoolbar div.index > div {
 div#edittoolbar div.index > div.current {
 	background-color: white;
 	color: #333333;
+	cursor: default;
 }
 div#edittoolbar div.pages {
 	float: right;
