--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -156,6 +156,26 @@ div#edittoolbar-section-help div.page > table td.result {
 div#edittoolbar-section-help div.page > table td.description {
 	width: 20%;
 }
+div#edittoolbar-section-characters div.page > a {
+	border: solid 1px #DDDDDD;
+	padding: 5px;
+	padding-left: 8px;
+	padding-right: 8px;
+	margin-left: 5px;
+	margin-top: 5px;
+	height: 1em;
+	float: left;
+	display: block;
+	color: black;
+	text-decoration: none;
+}
+div#edittoolbar-section-characters div.page > a:hover {
+	background-color: white;
+	text-decoration: none;
+	border-color: #a8d7f9;
+}
+div#edittoolbar-section-characters div.page > div.character {
+}
 div#edittoolbar div.tabs > div.tab {
 	float: left;
 	line-height: 26px;
