Fixed a few CSS bugs and tweked some javascript field names.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51754 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -9,13 +9,13 @@ form#editform {
 textarea#wpTextbox1 {
 	border: solid silver 1px;
 	padding: 0;
-	margin-top: -2px;
+	margin: 0;
 }
 /* ... */
 div#edittoolbar {
 	border: solid silver 1px;
 	border-bottom-width: 0;
-	background-color: #EEEEEE;
+	background-color: #F3F3F3;
 }
 div#edittoolbar div.tabs,
 div#edittoolbar div.group {
@@ -91,6 +91,7 @@ div#edittoolbar div.group > select {
 }
 body.rtl div#edittoolbar div.group > select {
 	float: right;
+	font-size: 0.9em;
 }
 div#edittoolbar div.index {
 	float: left;
