Tweaked colors to match Vector
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51769 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -103,7 +103,7 @@ div#edittoolbar div.index > div {
 	padding: 4px;
 	padding-left: 6px;
 	cursor: pointer;
-	color: #00528C;
+	color: #0645ad;
 }
 div#edittoolbar div.index > div.current {
 	background-color: #FAFAFA;
@@ -195,7 +195,7 @@ div#edittoolbar div.tabs > div.tab > a:visited {
 	display: block;
 	height: 26px;
 	cursor: pointer;
-	color: #00528C;
+	color: #0645ad;
 	background-image: url(images/arrow-right.png);
 	background-position: left center;
 	background-repeat: no-repeat;
