Made sections load asynchronously
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51798 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -56,6 +56,20 @@ div#edittoolbar div.sections > div.section {
 body.rtl div#edittoolbar div.sections > div.section {
 	float: right;
 }
+div#edittoolbar div.sections > div.loading {
+	padding: 10px;
+}
+div#edittoolbar div.sections > div > div.progress {
+	display: none;
+}
+div#edittoolbar div.sections > div.loading > div.progress {
+	display: block;
+	background-image: url(images/loading.gif);
+	background-position: left center;
+	background-repeat: no-repeat;
+	padding-left: 32px;
+	float: left;
+}
 div#edittoolbar div.group > div.label {
 	float: left;
 	border: 0px;
