Tweaked loading label color
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51800 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -69,6 +69,7 @@ div#edittoolbar div.sections > div.loading > div.progress {
 	background-repeat: no-repeat;
 	padding-left: 32px;
 	float: left;
+	color: #666666;
 }
 div#edittoolbar div.group > div.label {
 	float: left;
