--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -6,6 +6,10 @@ form#editform {
 	padding: 0;
 	padding-right: 2px;
 }
+body.rtl form#editform {
+	padding-right: 0;
+	padding-left: 2px;
+}
 textarea#wpTextbox1 {
 	border: solid silver 1px;
 	padding: 0;
@@ -71,6 +75,12 @@ div#edittoolbar div.sections > div.loading > div.progress {
 	float: left;
 	color: #666666;
 }
+div#edittoolbar div.sections > div.loading > div.progress {
+	background-position: right center;
+	padding-left: 0;
+	padding-right: 32px;
+	float: right;
+}
 div#edittoolbar div.group > div.label {
 	float: left;
 	border: 0px;
@@ -114,11 +124,18 @@ div#edittoolbar div.index {
 	height: 125px;
 	overflow: auto;
 }
+body.rtl div#edittoolbar div.index {
+	float: right;
+}
 div#edittoolbar div.index > div {
 	padding: 4px;
 	padding-left: 6px;
 	cursor: pointer;
 	color: #0645ad;
+}
+body.rtl div#edittoolbar div.index > div {
+	padding-left: 4px;
+	padding-right: 6px;
 }
 div#edittoolbar div.index > div.current {
 	background-color: #FAFAFA;
@@ -134,6 +151,9 @@ div#edittoolbar div.pages {
 	height: 125px;
 	overflow: auto;
 	background-color: #FAFAFA;
+}
+body.rtl div#edittoolbar div.pages {
+	float: left;
 }
 div#edittoolbar div.pages > div.page {
 	display: none;
@@ -162,6 +182,10 @@ div#edittoolbar div.pages > div.page > table td {
 	padding: 5px;
 	margin: 0px;
 }
+body.rtl div#edittoolbar div.pages > div.page > table th,
+body.rtl div#edittoolbar div.pages > div.page > table td {
+	text-align: right;
+}
 div#edittoolbar div.pages > div.page > table td.syntax {
 	font-family: monospace;
 }
@@ -185,16 +209,16 @@ div#edittoolbar-section-characters div.page > div > a {
 	color: black;
 	text-decoration: none;
 }
-div#edittoolbar-section-characters div.page > div.rtl > a {
+body.rtl div#edittoolbar-section-characters div.page > div > a {
 	direction: rtl;
 	float: right;
+	margin-left: 0;
+	margin-right: 5px;
 }
 div#edittoolbar-section-characters div.page > div > a:hover {
 	background-color: white;
 	text-decoration: none;
 	border-color: #a8d7f9;
-}
-div#edittoolbar-section-characters div.page > div > div.character {
 }
 div#edittoolbar div.tabs > div.tab {
 	float: left;
