Added new left facing arrow icon for use in right to left.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@51923 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/UsabilityInitiative/EditToolbar/EditToolbar.css
+++ b/UsabilityInitiative/EditToolbar/EditToolbar.css
@@ -243,6 +243,7 @@ body.rtl div#edittoolbar div.tabs > div.tab > a,
 body.rtl div#edittoolbar div.tabs > div.tab > a:visited {
 	padding-left: 12px;
 	padding-right: 18px;
+	background-image: url(images/arrow-left.png);
 	background-position: right center;
 }
 div#edittoolbar div.tabs > div.tab > a.current,
