LiquidThreads stuff: * Fix bug in thread causing all threads to have a thread_ancestor of 0, making the software think it was a top-level thread. * Add backwards-compatibility code, recursively follows thread_parent until it gets to thread_parent=0 to deduce the correct thread_ancestor. * Break permalink link out from Actions drop-down to beside the Actions text. * Fix backlinks from thread permalinks to include anchors to where you were, making it a nice context link. * Change another instance of hard-coded HTML into generated HTML. * Fix Actions drop-down to properly hug the RHS, instead of using a weird margin-right hack.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@52360 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -493,13 +493,6 @@ li.lqt-command-reply {
 	text-align: right;
 }
 
-.lqt-thread-header-commands {
-	float: right;
-	font-size: 85%;
-	margin: 0;
-	margin-right: 2em;
-}
-
 .lqt-thread-header-commands:hover {
 	background-color: #eeeeee;
 }
@@ -558,4 +551,17 @@ li.lqt-command-reply {
 	padding: 0.2em;
 	margin: 0.3em;
 	margin-left: 2em;
+}
+
+.lqt-thread-header-rhs {
+	float: right;
+	font-size: 85%;
+	margin: 0;
+	text-wrap: suppress;
+}
+
+.lqt-thread-header-commands {
+	padding: 0;
+	margin: 0;
+	display: inline-block;
 }
