Only indent subthreads
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@52367 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -530,6 +530,11 @@ li.lqt-command-reply {
 	list-style-image: none;
 }
 
+.lqt-thread-permalink {
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+}
+
 .lqt-thread-actions-trigger {
 	margin-bottom: 0;
 }
@@ -550,6 +555,10 @@ li.lqt-command-reply {
 	border: 1px solid #cccccc;
 	padding: 0.2em;
 	margin: 0.3em;
+}
+
+/* Only indent subthreads */
+.lqt_thread .lqt_thread {
 	margin-left: 2em;
 }
 
