Tweak colour of edited by other users notice to avoid confusion with red links
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@52390 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -481,7 +481,7 @@ li#ca-nstab-thread {
 
 .lqt-thread-header-edited-others {
 	font-weight: bold;
-	color: #880000;
+	color: #aa8800;
 }
 
 .lqt-command-icon {
