Fix buttons changing size on hover
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@52445 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiquidThreads/lqt.css
+++ b/LiquidThreads/lqt.css
@@ -499,6 +499,7 @@ li.lqt-command-reply {
 
 .lqt-thread-actions-trigger {
 	padding: 0.5em;
+	border: 1px transparent;
 }
 
 .lqt-thread-header-commands:hover .lqt-thread-actions-trigger {
